<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2024 Paranoid Android
     SPDX-License-Identifier: Apache-2.0
-->
<resources>

    <!-- Generic texts -->
    <string name="disabled">Disabled</string>

    <!-- XiaomiParts -->
    <string name="xiaomiparts">XiaomiParts</string>
    <string name="audio_title">Audio</string>
    <string name="display_title">Display</string>

    <!-- Dirac settings -->
    <string name="dirac_title">Dirac</string>
    <string name="dirac_enable">Enable audio optimizer</string>
    <string name="dirac_summary">Optimize audio quality</string>
    <string name="dirac_headset_title">Choose headphones type</string>
    <string name="dirac_preset_title">Choose a preset</string>

    <!-- Dirac settings: Headset types -->
    <string name="dirac_headset_default">Default</string>
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston-1</string>
    <string name="dirac_headset_general">General</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston-2</string>
    <string name="dirac_headset_piston_standard">Standard Edition</string>
    <string name="dirac_headset_headphone">Mi Headphones</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling Type-C</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling 3.5mm</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>
    <string name="dirac_headset_ear_four">Mi Quadruple Driver Earphones</string>
    <string name="dirac_headset_piston_typec">Mi In-Ear Headphones (Type-C)</string>
    <string name="dirac_headset_bluetooth_collar">Mi Bluetooth Neckband</string>
    <string name="dirac_headset_bluetooth_linefree">Mi Bluetooth Earphones</string>
    <string name="dirac_headset_redmi_earphones">Redmi Earphones</string>
    <string name="dirac_headset_dual_driver_in_ear">Mi Dual Driver In-ear Earphones</string>

    <!-- Dirac settings: Equalizer presets -->
    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>
    <string name="dirac_preset_bass_booster">Bass Booster</string>
    <string name="dirac_preset_live">Live</string>
    <string name="dirac_preset_balanced">Balanced</string>
    <string name="dirac_preset_bass_reduction">Bass Reduction</string>
    <string name="dirac_preset_treble_reduction">Treble Reduction</string>
    <string name="dirac_preset_soft_bass">Soft Bass</string>
    <string name="dirac_preset_soft_treble">Soft Treble</string>

    <!-- Dirac settings: Sound Scenes -->
    <string name="music_headset_scenario_select">Select scene</string>
    <string name="music_headset_scenario_intelligent">Smart</string>
    <string name="music_headset_scenario_music">Music</string>
    <string name="music_headset_scenario_video">Video</string>
    <string name="music_headset_scenario_vocal">Voice</string>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_enable">Use Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.\n\nWARNING: Ensure that any headphones are unplugged.</string>

    <!-- KCAL -->
    <string name="kcal_settings_title">KCAL</string>
    <string name="kcal_settings_summary">Customize screen colors</string>
    <string name="cat_colormanagement">Color settings</string>
    <string name="cat_calibration">Display calibration</string>
    <string name="kcal_enabled">On</string>
    <string name="kcal_disabled">Off</string>
    <string name="set_on_boot">Set on boot</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_minimum">Minimum</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="contrast">Contrast</string>
    <string name="hue">Hue</string>
    <string name="grayscale">Grayscale</string>

    <!-- Presets -->
    <string name="presets_dialog_title">Select preset</string>
    <string name="preset_default">Default</string>
    <string name="preset_version_1">Version 1</string>
    <string name="preset_version_2">Version 2</string>
    <string name="preset_version_3">Version 3</string>
    <string name="preset_triluminous">Triluminous</string>
    <string name="preset_deep_black_white">Deep Black and White</string>
    <string name="preset_deep_natural">Deep Natural</string>
    <string name="preset_cool_amoled">Cool Amoled</string>
    <string name="preset_extreme_amoled">Extreme Amoled</string>
    <string name="preset_warm_amoled">Warm Amoled</string>
    <string name="preset_hybrid_mamba">Hybrid Mamba</string>
    <string name="preset_burn_in">Burn in Shit</string>
    <string name="preset_retention">Retention Fix</string>
    <string name="preset_gerard_extrem_cool">Gerard Extreme Cool</string>
    <string name="preset_yoyoz808">Yoyoz808</string>
    <string name="preset_purian">Purian</string>
    <string name="preset_deep_black_colorful">Deep Black Colorful</string>
    <string name="preset_vomer_deep_rich">Vomer Deep Rich</string>
    <string name="preset_franco">Franco</string>
    <string name="preset_wrinklefree_cool">WrinkleFree Cool</string>
    <string name="preset_harley_tech">Harley-Tech</string>
    <string name="preset_perfection">Perfection</string>
    <string name="preset_banged_up">Banged up</string>
    <string name="preset_sim_cooler">SimCooler</string>
    <string name="preset_obsanity">Obsanity</string>
    <string name="preset_obsanity_ips">Obsanity IPS</string>
    <string name="preset_sir_banger">Sir Banger</string>

    <!-- Menu -->
    <string name="kcal_presets">@string/presets_dialog_title</string>
    <string name="kcal_reset">Reset</string>

    <!-- LCD Features -->
    <string name="lcd_features_title">LCD features</string>
    <string name="lcd_features_summary">High Brightness Mode, CABC</string>
    <string name="lcd_hbm_title">High Brightness Mode (HBM)</string>
    <string name="lcd_hbm_medium">Medium</string>
    <string name="lcd_hbm_high">High</string>
    <string name="lcd_cabc_title">CABC Mode</string>
    <string name="lcd_cabc_low">Low (UI)</string>
    <string name="lcd_cabc_medium">Medium (Videos)</string>
    <string name="lcd_cabc_high">High (Images)</string>
    <string name="lcd_features_info">High Brightness Mode (HBM) increases the maximum brightness of the display to improve visibility under sunlight. Increases power consumption.\n\nCABC (Content Adaptive Backlight Control) adjusts display and backlight brightness based on currently shown content, to reduce power consumption without degradation.</string>

    <!-- Refresh Rate  -->
    <string name="refresh_title">Per-app refresh rate</string>
    <string name="refresh_summary">Set a specific refresh rate for each application</string>
    <string name="refresh_default">Default</string>
    <string name="refresh_rate_tile_title">Refresh Rate</string>

    <!-- FPS Counter -->
    <string name="fps_info_title">FPS Counter</string>

</resources>
