<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2024 Paranoid Android
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="audio"
        android:title="@string/audio_title">

        <Preference
            android:key="clear_speaker_settings"
            android:icon="@drawable/ic_clear_speaker"
            android:title="@string/clear_speaker_title"
            android:summary="@string/clear_speaker_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="co.aospa.parts.speaker.ClearSpeakerActivity"
                android:targetPackage="co.aospa.parts.speaker" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <Preference
            android:key="kcal_settings"
            android:icon="@drawable/ic_kcal"
            android:title="@string/kcal_settings_title"
            android:summary="@string/kcal_settings_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="co.aospa.parts.display.KcalSettingsActivity"
                android:targetPackage="co.aospa.parts.display" />
        </Preference>

        <Preference
            android:key="lcd_features_settings"
            android:icon="@drawable/ic_cabc"
            android:title="@string/lcd_features_title"
            android:summary="@string/lcd_features_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="co.aospa.parts.display.LcdFeaturesPreferenceActivity"
                android:targetPackage="co.aospa.parts.display" />
        </Preference>

        <Preference
            android:key="refresh_rate_settings"
            android:icon="@drawable/ic_refresh_rate"
            android:title="@string/refresh_title"
            android:summary="@string/refresh_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="co.aospa.parts.refreshrate.RefreshActivity"
                android:targetPackage="co.aospa.parts.refreshrate" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
