<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2024 Paranoid Android
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/lcd_features_title" >

    <ListPreference
        android:key="pref_hbm"
        android:title="@string/lcd_hbm_title"
        android:entries="@array/lcd_hbm_modes"
        android:entryValues="@array/lcd_hbm_values"
        android:defaultValue="0" />

    <ListPreference
        android:key="pref_cabc"
        android:title="@string/lcd_cabc_title"
        android:entries="@array/lcd_cabc_modes"
        android:entryValues="@array/lcd_cabc_values"
        android:defaultValue="0" />

    <com.android.settingslib.widget.FooterPreference
        android:key="lcd_features_footer"
        android:title="@string/lcd_features_info"
        android:selectable="false" />

</PreferenceScreen>
